--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,8 @@
     <h1>Marvel APP</h1>
 
     <ul id="characters">
-        <li><a href="https://en.wikipedia.org/wiki/Beast_(Marvel_Comics)" target="_blank">Beast</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Captain_America" target="_blank">Captain America</a></li> 
-        <li><a href="https://en.wikipedia.org/wiki/Deadpool" target="_blank">Deadpool</a></li> 
-        <li><a href="https://en.wikipedia.org/wiki/Groot" target="_blank">Groot</a></li> 
-        <li><a href="https://en.wikipedia.org/wiki/Hulk" target="_blank">Hulk</a></li>  
+
     </ul>
+    <script src="script.js"></script>
 </body>
 </html>
